# Facial-Analysis-System

./: LICENSE  README.md
source/: main.cxx
source/appearanceCode/: BaseAppearanceCode.h  CLBP.cpp  CLBP.h  ICCE.cpp  ICCE.h  LBP.cpp  LBP.h  LDNP.cpp  LDNP.h  LDP.cpp  LDP.h  NEDPS.cpp  NEDPS.h  NEDPU.cpp  NEDPU.h  PTP.cpp  PTP.h
source/classifier/: BaseClassifier.h  KNN.cpp  KNN.h  SVM.cpp  SVM.h  TemplateMatching.cpp  TemplateMatching.h
source/conf/: ICCE.conf  LBP.conf  LDNP.conf  LDP.conf  LDTP.conf  LGSP.conf  LPTP.conf  LSDP.conf  SVM.conf  SpatialHistogram.conf  UniformHistogram.conf  appearancecode_class_list  appearancecode_class_list.in  classifier_class_list  distance_class_list  facial_analysis.conf  featurerepresentation_class_list  preprocessing_class_list
source/core/: AppearanceCodeManager.cpp.in  AppearanceCodeManager.h.in  CMakeLists.txt  ClassifierManager.cpp.in  ClassifierManager.h.in  ConfigFileManager.cpp.in  ConfigFileManager.h  Definitions.h  DistanceManager.cpp  DistanceManager.h  Exceptions.cpp  Exceptions.h  FacialAnalysisFrame.cpp  FacialAnalysisFrame.h  FeatureReductionManager.h  FeatureRepresentationManager.cpp.in  FeatureRepresentationManager.h.in  GenericFactory.h  ImageFileManager.cpp  ImageFileManager.h  PreprocessingManager.cpp.in  PreprocessingManager.h.in  TraceMessage.cpp  TraceMessage.h
source/core/support/: CMakeLists.txt  NumStr.cpp  NumStr.h  Parser.cpp  Parser.h
source/distance/: BaseDistance.h  ChiSquare.cpp  ChiSquare.h
source/featureReduction/: BaseFeatureReduction.h
source/featureRepresentation/: CMakeLists.txt  (+7 more)
(+4 files in other folders)
